--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
             <version>8.0.30</version>
         </dependency>
         <dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.24</version>
+    <scope>provided</scope>
+</dependency>
+        <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
             <version>2.20.0</version>
@@ -126,6 +132,14 @@
             <artifactId>allure-rest-assured</artifactId>
             <version>2.21.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-maven -->
+<dependency>
+    <groupId>io.qameta.allure</groupId>
+    <artifactId>allure-maven</artifactId>
+    <version>2.12.0</version>
+    
+</dependency>
+
         <dependency>
     <groupId>com.aventstack</groupId>
     <artifactId>extentreports</artifactId>
