--- a/pom.xml
+++ b/pom.xml
@@ -18,15 +18,15 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.0.0</version>
-                       
                     <configuration>
+						<testFailureIgnore>true</testFailureIgnore>
+						<argLine>
+							-javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.9.7/aspectjweaver-1.9.7.jar
+						</argLine>
                         <suiteXmlFiles>
                             <suiteXmlFile>testng.xml</suiteXmlFile>
                         </suiteXmlFiles>
-                    </configuration>
-                    <dependencies>
-
-                    </dependencies>
+                    </configuration>                   
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -116,11 +116,11 @@
             <version>8.0.30</version>
         </dependency>
         <dependency>
-    <groupId>org.projectlombok</groupId>
-    <artifactId>lombok</artifactId>
-    <version>1.18.24</version>
-    <scope>provided</scope>
-</dependency>
+    		<groupId>org.projectlombok</groupId>
+    		<artifactId>lombok</artifactId>
+   			<version>1.18.24</version>
+    		<scope>provided</scope>
+		</dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
@@ -133,18 +133,17 @@
             <version>2.21.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-maven -->
-<dependency>
-    <groupId>io.qameta.allure</groupId>
-    <artifactId>allure-maven</artifactId>
-    <version>2.12.0</version>
-    
-</dependency>
-
+		<dependency>
+    		<groupId>io.qameta.allure</groupId>
+    		<artifactId>allure-maven</artifactId>
+    		<version>2.12.0</version>
+    	</dependency>
         <dependency>
-    <groupId>com.aventstack</groupId>
-    <artifactId>extentreports</artifactId>
-    <version>5.0.9</version>
-</dependency>
+    		<groupId>com.aventstack</groupId>
+    		<artifactId>extentreports</artifactId>
+    		<version>5.0.9</version>
+		</dependency>
     </dependencies>
-  
+    
+     
 </project>
