--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,10 +32,16 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       
-    - name: Send mail
-        if: always()
-        uses: dawidd6/action-send-mail@v2
+    - name: Output the run Details
+        uses: actions/upload-artifact@v2
         with:
+          name: RunReports
+          path: reports
+          
+    - name: Send mail
+    if: always()
+    uses: dawidd6/action-send-mail@v2
+    with:
         
           # mail server settings
           server_address: smtp.gmail.com
