--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -44,8 +44,29 @@ jobs:
   #  - name: Update dependency graph
   #    uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
   
-   # Upload the contents of Test Results directory to workspace
-         
+  # Upload the contents of Test Results directory to workspace
+  - name: Send mail
+    if: always()
+    uses: dawidd6/action-send-mail@v2
+    with:
+        
+          # mail server settings
+          server_address: smtp.gmail.com
+          server_port: 465
+        
+          # user credentials
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          # email subject
+          subject: ${{ github.job }} job of ${{ github.repository }} has ${{ job.status }}
+          # email body as text
+          body: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
+          # comma-separated string, send email to
+          to: thegavendrathakur@gmail.com
+          # Optional attachments:
+          attachments: reports/Test-Report-yyyy.mm.dd.hh.mm.ss.html
+          # from email name
+          from: Gavendra Singh 
           # mail server settings
           server_address: smtp.gmail.com
           server_port: 465
