--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,20 +17,23 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  test:
+  name: Run Tests
 
-    runs-on: ubuntu-latest
+  runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v3
+  steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v3
     - name: Set up JDK 19
       uses: actions/setup-java@v3
       with:
         java-version: '19'
-        distribution: 'temurin'
-        cache: maven
+      
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn clean install
+    - name: Run Tests with Maven
+      run: mvn test
       
     - name: Output the run Details
       uses: actions/upload-artifact@v2
@@ -45,10 +48,10 @@ jobs:
   #    uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
   
   # Upload the contents of Test Results directory to workspace
-  - name: Send mail
-    if: always()
-    uses: dawidd6/action-send-mail@v2
-    with:
+    - name: Send mail
+      if: always()
+      uses: dawidd6/action-send-mail@v2
+      with:
         
           # mail server settings
           server_address: smtp.gmail.com
