--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <aspectj.version>1.9.19</aspectj.version>
         <json.version>20230227</json.version>
-        <allure.results.directory>target/allure-results_${timestamp}</allure.results.directory>
-        <allure.report.directory>target/allure-results_${timestamp}/allure-report</allure.report.directory>
  </properties>
 
 <dependencies>
@@ -101,6 +99,11 @@
    			<version>1.18.24</version>
     		<scope>provided</scope>
 		</dependency>
+		<dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-resources-plugin</artifactId>
+    <version>3.2.0</version>
+</dependency>
         
        
 		<dependency>
@@ -129,7 +132,16 @@
     <artifactId>maven-project-info-reports-plugin</artifactId>
     <version>3.4.0</version>
 				</plugin>                
-                <!-- Post-Man plugin -->
+                <plugin>
+					<groupId>io.qameta.allure</groupId>
+					<artifactId>allure-maven</artifactId>
+					<version>2.10.0</version>
+					<configuration>
+						<reportVersion>2.14.0</reportVersion>
+                    <outputDirectory>${project.basedir}/target/allure-reports/</outputDirectory>
+                    <resultsDirectory>${project.basedir}/target/allure-results</resultsDirectory>
+                </configuration>
+				</plugin>
 		 
 		<plugin>
                     <groupId>org.apache.maven.plugins</groupId>
